--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--music theme part start-->
 <section class="music-theme">
     <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center m-auto">
             <div class="col-sm-4 img-w">
                 <img src="images/music-1.png" class="img-fluid" alt="png">
             </div>
